# DotNetMCP

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT.md  README.md  TECH_STACK.md  TODO.md
.AIINFO/: context.md  plan.md  tasks.md
.github/workflows/: ci.yml
backend-service/: DotNetMcp.Backend.sln
backend-service/src/DotNetMcp.Backend/: DotNetMcp.Backend.csproj  DotNetMcp.Backend.http  Program.cs
backend-service/src/DotNetMcp.Backend/Controllers/: AnalysisController.cs  (+7 more)
backend-service/tests/DotNetMcp.Backend.Tests/: DotNetMcp.Backend.Tests.csproj  UnitTest1.cs
docker/: Dockerfile.allinone  Dockerfile.backend  Dockerfile.mcp-server  Dockerfile.test  README.md  docker-compose-e2e.yml  docker-compose-multiuser.yml  docker-compose-seq-test.yml  docker-compose.allinone.yml  docker-compose.test.yml  docker-compose.yml
docker/scripts/: start.sh  supervisord.conf
mcp-server/: dotnetmcp_server.py  pyproject.toml  requirements.txt
mcp-server/data/config/: server.toml
mcp-server/src/server/: __init__.py  config.py  config_loader.py  instance_registry.py  main.py  prompts.py  resources.py
mcp-server/src/server/tools/: __init__.py  analysis.py  batch.py  batch_export.py  cfg.py  core.py  dependencies.py  detection.py  export.py  graphs.py  instance.py  modification.py  obfuscation.py  patterns.py  resources.py  search.py  signature.py  transaction.py  transfer.py  xrefs.py
tests/e2e/: conftest.py  requirements.txt  test_analysis.py  test_complete_scenarios.py  test_modification.py  test_user_workflows.py
tests/fixtures/SampleLib/: SampleLib.csproj
(+76 files in other folders)
